# rococo

./: .gitignore  CMakeLists.txt  README.md  config.mcore.xml  run.py  test.sh  wscript
bench/rw_benchmark/: sharding.cc
config/: localhost-1.yaml  localhost-3.yaml  localhost-5.yaml  sample.yml
deptran/: c_main.cc  client_worker.cc  config.cc  config.h  coordinator.cc  coordinator.h  frame.cc  rcc.cpp  rcc_rpc.h  rcc_rpc.py  rcc_service.cc  rcc_service.h  ro6.cpp  s_main.cc  scheduler.cc  server_worker.cc  sharding.cc  sharding.h  tpl.cpp  tpl.hpp  txn_info.h
deptran/lamport/: LamportClock.cpp  LamportClock.h
deptran/mdcc/: mdcc.cc  mdcc.h  mdcc_coord.cc  mdcc_coord.h
deptran/rcc/: rcc_coord.cc
deptran/ro6/: ro6_coord.cc
deptran/three_phase/: coord.cc
libzfec/: fec.h
loli_test/: test_encoder.cpp  test_window.cpp  test_window_others.cpp  test_zefc.cpp
memdb/: txn.cc  txn.h
mpaxos/: acceptor.cpp  acceptor.hpp  captain.cpp  captain.hpp  commo.cpp  commo.hpp  detect_error.hpp  detect_file.hpp  internal_types.hpp  message.proto  mpaxos-config.cpp  mpaxos.proto  newfile_template  proposer.cpp  proposer.hpp  rs_decoder.hpp  rs_encoder.hpp  rs_proposer.cpp  rs_proposer.hpp  tools.cpp  tools.hpp  view.cpp  view.hpp  zmq_dealer_client.hpp
waf-tools/: protoc.py
